freest/test/prog/Valid/SessionTypes/SendAndWait/SendAndWait.fst
module SendAndWait where

main : ()
main = forkWith receiveAndClose |> sendAndWait 5
