freest/test/prog/Invalid/SessionTypes/DualOfNonSession/DualOfNonSession.fst
module DualOfNonSession where

main : Dual (Int -> Int)
main = undefined